--- a/client-config-production.properties
+++ b/client-config-production.properties
@@ -1,2 +1,2 @@
-msg = Hello world - this is from config server - production Environment
+msg = Hello world - this is from config server - production Environment -from git hub retrived
 var = New variable
